[gd_scene load_steps=28 format=2]

[ext_resource path="res://Assets/KBGS/KGBS-player-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Minigames/KBGS/KBGSPlayer.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 24, 4.66667 )

[sub_resource type="CapsuleShape2D" id=24]
radius = 7.10596
height = 181.533

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 31.6667, 23.6667 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2000, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2125, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2250, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2375, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 2500, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 125, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 250, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 375, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 500, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 625, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 750, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 875, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1000, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1125, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1250, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1375, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1500, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1625, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1750, 0, 125, 133 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1875, 0, 125, 133 )

[sub_resource type="SpriteFrames" id=48]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "Hit",
"speed": 15.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": false,
"name": "Jump",
"speed": 15.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
} ]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 1.5, 1.5 )
collision_layer = 2
script = ExtResource( 4 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 60.6667 )
shape = SubResource( 25 )

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape" type="CollisionShape2D" parent="PlayerHitbox"]
position = Vector2( 0, 14 )
scale = Vector2( 3.18981, 0.463188 )
shape = SubResource( 24 )

[node name="PlayerPunchArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="PlayerHitShape" type="CollisionShape2D" parent="PlayerPunchArea"]
position = Vector2( -46.3333, 0.333315 )
shape = SubResource( 26 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_right = 3840
limit_bottom = 0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 48 )
animation = "Hit"
frame = 2

[connection signal="area_entered" from="PlayerHitbox" to="." method="_on_PlayerHitbox_area_entered"]
[connection signal="area_exited" from="PlayerHitbox" to="." method="_on_PlayerHitbox_area_exited"]
[connection signal="area_entered" from="PlayerPunchArea" to="." method="_on_PlayerHit_area_entered"]
[connection signal="area_exited" from="PlayerPunchArea" to="." method="_on_PlayerHit_area_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
